fix bugs and make demo section
